--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,10 +5,10 @@
     tools:context=".MainActivity">
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/slidingmenu_bg"
-        android:id="@+id/relativeLayout">
+        android:background="@drawable/slidingmenu_bg">
 
         <ImageButton
             android:id="@+id/main_flipper"
@@ -40,11 +40,32 @@
             android:background="@drawable/share_grey" />
     </RelativeLayout>
 
+
+    <LinearLayout
+        android:id="@+id/overviewRelativeLayout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/relativeLayout"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:text="Overview" />
+    </LinearLayout>
+
     <ListView
         android:id="@+id/call_history_item"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:cacheColorHint="#00000000"
-        android:layout_below="@+id/relativeLayout" />
+        android:layout_below="@+id/overviewRelativeLayout"
+        android:cacheColorHint="#00000000" />
+
 
 </RelativeLayout>
