--- a/app/src/main/res/layout/call_history_item.xml
+++ b/app/src/main/res/layout/call_history_item.xml
@@ -1,77 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent" android:layout_height="54dp">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/call_img"
-        android:background="@drawable/person_portrait_default" />
+    <QuickContactBadge
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:id="@+id/contact_badge"
+        android:background="@drawable/person_portrait_default"
+        android:paddingLeft="3dp"
+        android:paddingTop="3dp"
+        android:layout_gravity="center" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
+        android:layout_height="52dp"
+        android:orientation="vertical">
 
         <LinearLayout
-            android:orientation="horizontal"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Contact Name"
-                android:id="@+id/contact_name"
-                android:layout_gravity="center_vertical"
-                android:layout_marginLeft="2dp" />
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/cloud_img"
-                android:background="@drawable/cloud_storage"
-                android:layout_gravity="center_vertical" />
+            android:layout_height="26dp"
+            android:orientation="horizontal">
 
-            </LinearLayout>
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/inout_img"
-                android:background="@drawable/incall"
-                android:layout_gravity="center_vertical" />
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/phone_img"
-                android:background="@drawable/phone_icon"
-                android:layout_gravity="center_vertical" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Phone Number"
-                android:id="@+id/phone_number"
-                android:layout_gravity="center_vertical" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Call Time"
-                android:id="@+id/call_time"
-                android:layout_gravity="center_vertical" />
+                <TextView
+                    android:id="@+id/contact_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="2dp"
+                    android:text="Contact Name"
+                    android:layout_centerVertical="true"
+                    android:layout_toStartOf="@+id/cloud_img"
+                    android:layout_alignParentStart="true" />
 
 
+                <ImageView
+                    android:id="@+id/cloud_img"
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/cloud_storage"
+                    android:layout_alignParentRight="true" />
+            </RelativeLayout>
         </LinearLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal">
+            android:layout_height="26dp"
+            android:orientation="horizontal">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center_horizontal">
+
+                <ImageView
+                    android:id="@+id/inout_img"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_gravity="center_vertical"
+                    android:background="@drawable/incall"
+                    android:layout_alignParentLeft="true" />
+
+                <TextView
+                    android:id="@+id/phone_number"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Phone Number"
+                    android:layout_centerVertical="true"
+                    android:layout_toEndOf="@+id/inout_img"
+                    android:layout_toStartOf="@+id/call_time" />
+
+                <TextView
+                    android:id="@+id/call_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Call Time"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerVertical="true" />
             </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
 </LinearLayout>
