--- a/app/src/main/res/layout/call_history.xml
+++ b/app/src/main/res/layout/call_history.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
     <ListView
-        android:id="@+id/call_history_item"
+        android:id="@+id/my_call_history"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:cacheColorHint="#00000000" />
