--- a/app/src/main/res/layout/play_recording.xml
+++ b/app/src/main/res/layout/play_recording.xml
@@ -21,8 +21,7 @@
                 android:id="@+id/playerProgressLayout"
                 android:layout_width="fill_parent"
                 android:layout_height="48.0dip"
-                android:layout_above="@+id/playerLayout"
-                android:background="@drawable/progresslayout_bg" >
+                android:layout_above="@+id/playerLayout">
 
                 <TextView
                     android:id="@+id/player_current_time"
@@ -32,7 +31,7 @@
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="5.0dip"
                     android:text="0:00"
-                    android:textColor="@color/whilte"
+                    android:textColor="@color/black"
                     android:textStyle="bold" />
 
                 <TextView
@@ -46,7 +45,7 @@
                     android:gravity="right"
                     android:text="0:00"
                     android:textStyle="bold"
-                    android:textColor="@color/whilte" />
+                    android:textColor="@color/black" />
 
                 <SeekBar
                     android:id="@+id/player_progress"
@@ -66,8 +65,7 @@
             android:id="@+id/pause"
             android:layout_gravity="right"
             android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:background="@drawable/pause" />
+            android:layout_centerVertical="true"/>
     </RelativeLayout>
 
 </FrameLayout>
